# Robotics

./: .gitignore
MonoSLAM/: .gitignore  README.md  pyproject.toml
MonoSLAM/.ai/: AGENT_BRIEF.md  PROJECT_RULES.md
MonoSLAM/configs/: bootstrap.yaml  ekf.yaml
MonoSLAM/configs/cameras/: eth3d.yaml  kitti_odometry.yaml
MonoSLAM/configs/profiles/: eth3d_c2.yaml  kitti_odometry_00.yaml
MonoSLAM/exp/: current_status.md  experiment_log.md
MonoSLAM/notebooks/examples/: 01_lie_se3.py  (+3 more)
MonoSLAM/scripts/: demo_frontend.py  demo_frontend_eth3d.py  demo_frontend_kitti.py  demo_fundamental_8point.py  demo_fundamental_ransac_8point.py  demo_match_two_frames.py  demo_synthetic_two_view.py  demo_track_two_frames.py  diag_40px_resolve_stability.py  diag_40px_shadow_integration.py  diag_bad_vs_useful_fallbacks.py  diag_canonical_pose_storage.py  diag_eth3d_basis17_18_geometry.py  diag_eth3d_frame16_rescue_stages.py  diag_eth3d_frame19_shared18.py  diag_frame14_support_funnel.py  diag_frame16_pose_quality.py  diag_frame16_proxy_poses.py  diag_frame16_support_deep_dive.py  diag_frame3_comparison.py  diag_frame4_transition.py  diag_frame7_population.py  diag_landmark_quality.py  diag_map_growth_ab.py  diag_pnp.py  diag_pnp_corr_frame3.py  diag_pnp_eth3d.py  diag_pnp_kitti.py  diag_pnp_ransac_frame3.py  diag_pnp_residuals_frame3.py  diag_reprojection_frame3.py  diag_rescue_candidate_quality.py  diag_seed_state.py  diag_strict_on_loose_calibration.py  frontend_eth3d_common.py  frontend_reporting.py  jsonl_io.py  run_8_point.py  run_ransac_8_point.py  test_bootstrap_only.py  (+4 more)
(+245 files in other folders)
